--- a/style.css
+++ b/style.css
@@ -6,14 +6,41 @@
     font-style: normal;
   }
 
-  /*====root====*/
-
-  :root{
-    --body-color:
-    --navbar-color:
+  :root {
+    --body-color: rgb(33, 34, 34) ;
+    --text-color: rgb(255, 255, 255) ;
   }
-
-
-  /*====navbar====*/
-
-  /*====section====*/
+  
+  
+  li, a{
+    font-family:  "montserrat",sans-serif ;
+    font-weight: 500;
+    font-size:  16px;
+    color: var(--text-color);
+    text-decoration: none;
+  }
+  
+  header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .logo {
+    cursor: pointer;
+  }
+  
+  .nav-links {
+    list-style: none;
+  }
+  
+  .nav-links li {
+    display: inline-block;
+    padding: 0px 20px;
+  }
+  
+  body {
+    height: 100vh;
+    background: var(--body-color);
+  }
+  
